220922 양과 늑대 주석 추가